saving current state

--- a/menu/Jordy3.html
+++ b/menu/Jordy3.html
@@ -1,3 +1,27 @@
-<button &#x2192; type="button">Click Me!</button>
-<button type="button">Click Me!</button>
-<button type="button"></button>
+<html>
+    <head>
+        <style type="text/css">
+            body{
+                background:red;
+            }
+            .button{
+                height:40px;
+                margin-top:40px;
+                border-radius: 30px 30px;
+                border-color:transparent;
+                border-style: solid;
+                
+            }
+        </style>
+        <script>
+            function pressed() {
+                var audio = new Audio('meow.wav');
+                audio.play();
+                
+            }
+        </script>
+    </head>
+    <body>
+        <button class="button" onclick="pressed()">Press Me</button>
+    </body>
+</html>
